# libjpathgen

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  cifuzz.yaml  pyproject.toml  setup.cfg  setup.py  setup.sh
.github/workflows/: CD.yml  CI.yml
bench/: CMakeLists.txt  mmbg_call.cpp  mmbg_create.cpp  mmbg_single_path_integration.cpp
bench/include/: generate.h
cmake/: Deps.cmake  Doxygen.cmake  EigenVectorization.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  Vcpkg.cmake
include/jpathgen/: environment.h  error.h  function.h  geometry.h  geos_compat.h  integration.h
src/: environment.cpp  geometry.cpp  integration.cpp  main.cpp  python.cpp
src/geometry/: coord_sequence_from_array.cpp
src/integration/: continuous.cpp  discrete.cpp
src/libjpathgen/: __init__.py  __main__.py.in
test/: CMakeLists.txt
test/fuzzing/: CMakeLists.txt  variable_length_gmm.cpp  variable_length_gmm_and_path.cpp  variable_length_path.cpp
test/python/: test_bindings.py
test/src/: environment_test.cpp  integration_test.cpp
test/src/integration/: continuous_test.cpp  discrete_test.cpp
