#   Copyright 2023 Jan-Hendrik Ewers
#   SPDX-License-Identifier: GPL-3.0-only

[metadata]
name = libjpathgen
description = A C++ library to speed up jpathgen computations
author = Jan-Hendrik Ewers
author_email = j.ewers.1@research.gla.ac.uk
license = GPL-3.0-or-later
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/iwishiwasaneagle/libjpathgen/
project_urls =
    Source = "https://github.com/iwishiwasaneagle/libjpathgen"

platforms = Linux

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: Unix
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Programming Language :: C++

[options]
zip_safe = False
python_requires = >=3.10
install_requires =
    importlib-metadata; python_version<"3.8"

    setuptools
    setuptools_scm
    scikit-build
    cmake
    pybind11

[options.extras_require]
test =
    pytest
    numpy